--- a/index.html
+++ b/index.html
@@ -4,32 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost & Found Sekolah</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body { font-family: 'Segoe UI', sans-serif; background: #f0f2f5; margin: 0; padding: 20px; display: flex; justify-content: center; }
+        .container { width: 100%; max-width: 450px; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+        .hidden { display: none; }
+        input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; }
+        .btn-add { background: #1877f2; color: white; }
+        .btn-save { background: #42b72a; color: white; }
+        .btn-cancel { background: #f02849; color: white; }
+        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; }
+        .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
+        .loading { text-align: center; color: gray; }
+    </style>
 </head>
 <body>
-    <div class="app-container">
-        <header>
-            <h1>🔍 Lost & Found</h1>
-        </header>
+    <div class="container">
+        <h2>🔍 Lost & Found</h2>
+        
+        <div id="view-list">
+            <button id="btn-buka-form" class="btn-add">+ Lapor Barang Ditemukan</button>
+            <div id="item-list"><p class="loading">Memuat data...</p></div>
+        </div>
 
-        <section id="list-section">
-            <button id="btn-buka-form" class="btn-primary">+ Laporkan Barang</button>
-            <div id="item-list">
-                <p class="loading">Memuat data...</p>
-            </div>
-        </section>
-
-        <section id="form-section" class="hidden">
-            <h3>Laporan Barang Baru</h3>
-            <input type="text" id="input-nama" placeholder="Nama Barang">
-            <input type="text" id="input-lokasi" placeholder="Lokasi Ditemukan">
-            <div class="form-buttons">
-                <button id="btn-simpan" class="btn-save">Posting</button>
-                <button id="btn-batal" class="btn-cancel">Batal</button>
-            </div>
-        </section>
+        <div id="view-form" class="hidden">
+            <h3>Detail Laporan</h3>
+            <input type="text" id="nama-barang" placeholder="Nama Barang">
+            <input type="text" id="lokasi-barang" placeholder="Lokasi Ditemukan">
+            <label style="font-size: 12px; color: gray;">Pilih Foto (Max 1MB agar cepat):</label>
+            <input type="file" id="foto-barang" accept="image/*">
+            <button id="btn-posting" class="btn-save">Posting Sekarang</button>
+            <button id="btn-batal" class="btn-cancel">Batal</button>
+        </div>
     </div>
-
     <script type="module" src="script.js"></script>
 </body>
 </html>
