Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>Detail Laporan</h3>
             <input type="text" id="nama-barang" placeholder="Nama Barang">
             <input type="text" id="lokasi-barang" placeholder="Lokasi Ditemukan">
-            <label style="font-size: 12px; color: gray;">Pilih Foto (Max 1MB agar cepat):</label>
+            <label style="font-size: 12px; color: gray;">Pilih Foto:</label>
             <input type="file" id="foto-barang" accept="image/*">
             <button id="btn-posting" class="btn-save">Posting Sekarang</button>
             <button id="btn-batal" class="btn-cancel">Batal</button>
@@ -40,3 +40,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
