--- a/index.html
+++ b/index.html
@@ -9,50 +9,81 @@
         .container { width: 100%; max-width: 450px; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
         .hidden { display: none !important; }
         input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; transition: 0.3s; }
-        button:hover { opacity: 0.8; }
-        .btn-google { background: #db4437; color: white; }
-        .btn-main { background: #1877f2; color: white; }
-        .btn-save { background: #42b72a; color: white; }
-        .btn-cancel { background: #f02849; color: white; }
+        button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; }
+        .btn-main { background: #1877f2; color: white; width: 100%; }
+        .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; display: block; text-align: center; }
+        .user-bar { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; margin-bottom: 20px; padding-bottom: 10px; }
         .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; }
-        .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
-        .user-bar { display: flex; justify-content: space-between; align-items: center; padding-bottom: 10px; border-bottom: 1px solid #eee; margin-bottom: 20px; }
+        .card img { width: 100%; border-radius: 8px; }
+        .pass-container { position: relative; }
+        .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 12px; color: gray; }
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="auth-section">
-            <h2 style="text-align: center;">🔍 Masuk LostFound</h2>
-            <button id="btn-google-login" class="btn-google">Masuk dengan Google</button>
-            <div style="text-align: center; margin: 10px; color: gray;">atau pakai Email</div>
-            <input type="email" id="email-input" placeholder="Email">
-            <input type="password" id="pass-input" placeholder="Password">
-            <button id="btn-email-auth" class="btn-main">Login / Register</button>
+        <div id="login-section">
+            <h2 style="text-align: center;">Masuk</h2>
+            <input type="text" id="login-nick" placeholder="Nickname">
+            <div class="pass-container">
+                <input type="password" id="login-pass" placeholder="Password">
+                <span class="toggle-pass" onclick="togglePass('login-pass')">Lihat</span>
+            </div>
+            <button id="btn-login-action" class="btn-main">Login</button>
+            <p class="link-auth" onclick="showAuth('register')">Belum punya akun? Daftar sekarang!</p>
+        </div>
+
+        <div id="register-section" class="hidden">
+            <h2 style="text-align: center;">Daftar Akun</h2>
+            <input type="text" id="reg-nick" placeholder="Nickname Baru">
+            <div class="pass-container">
+                <input type="password" id="reg-pass" placeholder="Password">
+                <span class="toggle-pass" onclick="togglePass('reg-pass')">Lihat</span>
+            </div>
+            <div class="pass-container">
+                <input type="password" id="reg-confirm" placeholder="Konfirmasi Password">
+                <span class="toggle-pass" onclick="togglePass('reg-confirm')">Lihat</span>
+            </div>
+            <button id="btn-register-action" class="btn-main" style="background: #42b72a;">Daftar</button>
+            <p class="link-auth" onclick="showAuth('login')">Sudah punya akun? Login!</p>
         </div>
 
         <div id="main-app" class="hidden">
             <div class="user-bar">
-                <div>Halo, <b id="display-name">User</b></div>
-                <button id="btn-logout" style="width: auto; padding: 5px 10px; margin: 0; font-size: 12px;">Keluar</button>
+                <div>Halo, <b id="display-nick">User</b></div>
+                <button onclick="location.reload()" style="width: auto; padding: 5px 10px;">Logout</button>
             </div>
-
             <div id="view-list">
-                <button id="btn-tambah" class="btn-main" style="width: 100%;">+ Lapor Barang Ditemukan</button>
+                <button id="btn-tambah" class="btn-main">+ Lapor Barang</button>
                 <div id="item-list">Memuat laporan...</div>
             </div>
-
             <div id="view-form" class="hidden">
                 <h3>Laporan Baru</h3>
                 <input type="text" id="barang" placeholder="Nama Barang">
-                <input type="text" id="lokasi" placeholder="Lokasi Ketemu">
-                <label style="font-size: 11px; color: gray;">Foto Barang (Max 5MB):</label>
+                <input type="text" id="lokasi" placeholder="Lokasi">
                 <input type="file" id="foto" accept="image/*">
-                <button id="btn-posting" class="btn-save">Posting Sekarang</button>
-                <button id="btn-batal" class="btn-cancel">Batal</button>
+                <button id="btn-posting" class="btn-main" style="background: #42b72a;">Posting</button>
+                <button id="btn-batal" style="background: #f02849; color: white;">Batal</button>
             </div>
         </div>
     </div>
+
+    <script>
+        // Fungsi Hide/Show Password
+        function togglePass(id) {
+            const x = document.getElementById(id);
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+
+        // Fungsi Pindah Layar Auth
+        function showAuth(type) {
+            document.getElementById('login-section').classList.toggle('hidden', type === 'register');
+            document.getElementById('register-section').classList.toggle('hidden', type === 'login');
+        }
+    </script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
