--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lost & Found - Login</title>
+    <title>LostFound Sekolah - Pro</title>
     <style>
-        body { font-family: 'Segoe UI', sans-serif; background: #f0f2f5; margin: 0; padding: 20px; display: flex; justify-content: center; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f0f2f5; margin: 0; padding: 20px; display: flex; justify-content: center; }
         .container { width: 100%; max-width: 450px; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
         .hidden { display: none !important; }
         input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; }
+        button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; transition: 0.3s; }
+        button:active { transform: scale(0.98); }
         .btn-main { background: #1877f2; color: white; width: 100%; }
-        .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; display: block; text-align: center; }
+        .btn-save { background: #42b72a; color: white; width: 100%; }
+        .btn-cancel { background: #f02849; color: white; width: 100%; }
+        .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; text-align: center; display: block; margin-top: 10px; }
         .user-bar { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; margin-bottom: 20px; padding-bottom: 10px; }
-        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; }
-        .card img { width: 100%; border-radius: 8px; }
-        .pass-container { position: relative; }
-        .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 12px; color: gray; }
+        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; overflow: hidden; }
+        .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
+        .pass-container { position: relative; width: 100%; }
+        .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 12px; color: #1877f2; font-weight: bold; }
+        .remember-box { display: flex; align-items: center; gap: 8px; font-size: 14px; margin: 10px 0; color: #555; }
     </style>
 </head>
 <body>
@@ -26,10 +30,14 @@
             <input type="text" id="login-nick" placeholder="Nickname">
             <div class="pass-container">
                 <input type="password" id="login-pass" placeholder="Password">
-                <span class="toggle-pass" onclick="togglePass('login-pass')">Lihat</span>
+                <span class="toggle-pass" id="toggle-l">LIHAT</span>
+            </div>
+            <div class="remember-box">
+                <input type="checkbox" id="remember-me">
+                <label for="remember-me">Selalu Ingat Saya!</label>
             </div>
             <button id="btn-login-action" class="btn-main">Login</button>
-            <p class="link-auth" onclick="showAuth('register')">Belum punya akun? Daftar sekarang!</p>
+            <p class="link-auth" id="go-to-reg">Belum punya akun? Daftar sekarang!</p>
         </div>
 
         <div id="register-section" class="hidden">
@@ -37,53 +45,39 @@
             <input type="text" id="reg-nick" placeholder="Nickname Baru">
             <div class="pass-container">
                 <input type="password" id="reg-pass" placeholder="Password">
-                <span class="toggle-pass" onclick="togglePass('reg-pass')">Lihat</span>
+                <span class="toggle-pass" id="toggle-r1">LIHAT</span>
             </div>
             <div class="pass-container">
                 <input type="password" id="reg-confirm" placeholder="Konfirmasi Password">
-                <span class="toggle-pass" onclick="togglePass('reg-confirm')">Lihat</span>
+                <span class="toggle-pass" id="toggle-r2">LIHAT</span>
             </div>
             <button id="btn-register-action" class="btn-main" style="background: #42b72a;">Daftar</button>
-            <p class="link-auth" onclick="showAuth('login')">Sudah punya akun? Login!</p>
+            <p class="link-auth" id="go-to-login">Sudah punya akun? Login!</p>
         </div>
 
         <div id="main-app" class="hidden">
             <div class="user-bar">
-                <div>Halo, <b id="display-nick">User</b></div>
-                <button onclick="location.reload()" style="width: auto; padding: 5px 10px;">Logout</button>
+                <div>Halo, <b id="display-nick">...</b></div>
+                <button id="btn-logout" style="width: auto; padding: 5px 12px; margin: 0; background: #eee;">Logout</button>
             </div>
+
             <div id="view-list">
-                <button id="btn-tambah" class="btn-main">+ Lapor Barang</button>
-                <div id="item-list">Memuat laporan...</div>
+                <button id="btn-buka-form" class="btn-main">+ Lapor Barang</button>
+                <div id="item-list"><p style="text-align: center; color: gray;">Memuat data...</p></div>
             </div>
+
             <div id="view-form" class="hidden">
-                <h3>Laporan Baru</h3>
-                <input type="text" id="barang" placeholder="Nama Barang">
-                <input type="text" id="lokasi" placeholder="Lokasi">
-                <input type="file" id="foto" accept="image/*">
-                <button id="btn-posting" class="btn-main" style="background: #42b72a;">Posting</button>
-                <button id="btn-batal" style="background: #f02849; color: white;">Batal</button>
+                <h3>Detail Laporan</h3>
+                <input type="text" id="nama-barang" placeholder="Nama Barang">
+                <input type="text" id="lokasi-barang" placeholder="Lokasi Ketemu">
+                <label style="font-size: 11px; color: gray;">Foto (Maks 5MB):</label>
+                <input type="file" id="foto-barang" accept="image/*">
+                <button id="btn-posting" class="btn-save">Posting Sekarang</button>
+                <button id="btn-batal" class="btn-cancel">Batal</button>
             </div>
         </div>
     </div>
 
-    <script>
-        // Fungsi Hide/Show Password
-        function togglePass(id) {
-            const x = document.getElementById(id);
-            if (x.type === "password") {
-                x.type = "text";
-            } else {
-                x.type = "password";
-            }
-        }
-
-        // Fungsi Pindah Layar Auth
-        function showAuth(type) {
-            document.getElementById('login-section').classList.toggle('hidden', type === 'register');
-            document.getElementById('register-section').classList.toggle('hidden', type === 'login');
-        }
-    </script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
