--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
         .pass-container { position: relative; width: 100%; }
         .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 12px; color: #1877f2; font-weight: bold; }
-        .remember-box { display: flex; align-items: center; gap: 8px; font-size: 14px; margin: 10px 0; color: #555; }
+        
+        /* PERBAIKAN CHECKLIST */
+        .remember-box { 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            gap: 8px; 
+            font-size: 14px; 
+            margin: 15px 0; 
+            color: #555; 
+        }
+        .remember-box input[type="checkbox"] { 
+            width: 18px; 
+            height: 18px; 
+            margin: 0; 
+            cursor: pointer; 
+        }
     </style>
 </head>
 <body>
@@ -34,7 +50,7 @@
             </div>
             <div class="remember-box">
                 <input type="checkbox" id="remember-me">
-                <label for="remember-me">Selalu Ingat Saya!</label>
+                <label for="remember-me" style="cursor: pointer;">Selalu Ingat Saya!</label>
             </div>
             <button id="btn-login-action" class="btn-main">Login</button>
             <p class="link-auth" id="go-to-reg">Belum punya akun? Daftar sekarang!</p>
@@ -77,7 +93,6 @@
             </div>
         </div>
     </div>
-
     <script type="module" src="script.js"></script>
 </body>
 </html>
