--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LostFound Sekolah - Pro</title>
+    <title>Penemu - Temukan & Kembalikan</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f0f2f5; margin: 0; padding: 20px; display: flex; justify-content: center; }
         .container { width: 100%; max-width: 450px; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
@@ -14,35 +14,24 @@
         .btn-main { background: #1877f2; color: white; width: 100%; }
         .btn-save { background: #42b72a; color: white; width: 100%; }
         .btn-cancel { background: #f02849; color: white; width: 100%; }
+        .btn-delete { background: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 5px; font-size: 12px; cursor: pointer; float: right; }
+        .btn-delete:hover { background: #cc0000; }
         .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; text-align: center; display: block; margin-top: 10px; }
         .user-bar { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; margin-bottom: 20px; padding-bottom: 10px; }
-        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; overflow: hidden; }
+        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; overflow: hidden; position: relative; }
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
         .pass-container { position: relative; width: 100%; }
-        .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 12px; color: #1877f2; font-weight: bold; }
+        .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 11px; color: #1877f2; font-weight: bold; }
         
-        /* PERBAIKAN CHECKLIST */
-        .remember-box { 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; 
-            gap: 8px; 
-            font-size: 14px; 
-            margin: 15px 0; 
-            color: #555; 
-        }
-        .remember-box input[type="checkbox"] { 
-            width: 18px; 
-            height: 18px; 
-            margin: 0; 
-            cursor: pointer; 
-        }
+        /* TAMPILAN CHECKLIST RAPI */
+        .remember-box { display: flex; align-items: center; justify-content: center; gap: 8px; font-size: 14px; margin: 15px 0; color: #555; }
+        .remember-box input[type="checkbox"] { width: 18px; height: 18px; margin: 0; cursor: pointer; }
     </style>
 </head>
 <body>
     <div class="container">
         <div id="login-section">
-            <h2 style="text-align: center;">Masuk</h2>
+            <h2 style="text-align: center; color: #1877f2;">🔍 Penemu</h2>
             <input type="text" id="login-nick" placeholder="Nickname">
             <div class="pass-container">
                 <input type="password" id="login-pass" placeholder="Password">
