--- a/index.html
+++ b/index.html
@@ -15,17 +15,26 @@
         .btn-save { background: #42b72a; color: white; width: 100%; }
         .btn-cancel { background: #f02849; color: white; width: 100%; }
         .btn-delete { background: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 5px; font-size: 12px; cursor: pointer; float: right; }
-        .btn-delete:hover { background: #cc0000; }
-        .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; text-align: center; display: block; margin-top: 10px; }
+        
+        /* TAB / SLIDE FILTER */
+        .filter-tab { display: flex; background: #eee; border-radius: 10px; margin-bottom: 15px; padding: 5px; position: relative; }
+        .tab-item { flex: 1; text-align: center; padding: 10px; font-size: 14px; font-weight: bold; cursor: pointer; z-index: 2; transition: 0.3s; color: #555; }
+        .tab-item.active { color: #1877f2; }
+        .tab-bg { position: absolute; width: 50%; height: calc(100% - 10px); background: white; border-radius: 8px; transition: 0.3s ease-in-out; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 1; }
+        .slide-right { transform: translateX(100%); }
+
         .user-bar { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; margin-bottom: 20px; padding-bottom: 10px; }
-        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; overflow: hidden; position: relative; }
+        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; position: relative; }
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
         .pass-container { position: relative; width: 100%; }
         .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 11px; color: #1877f2; font-weight: bold; }
-        
-        /* TAMPILAN CHECKLIST RAPI */
         .remember-box { display: flex; align-items: center; justify-content: center; gap: 8px; font-size: 14px; margin: 15px 0; color: #555; }
-        .remember-box input[type="checkbox"] { width: 18px; height: 18px; margin: 0; cursor: pointer; }
+
+        /* CUSTOM MODAL */
+        .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); display: flex; justify-content: center; align-items: center; z-index: 9999; }
+        .modal-box { background: white; padding: 20px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
+        .modal-box h3 { margin-top: 0; color: #1877f2; border-bottom: 1px solid #eee; padding-bottom: 10px; }
+        .btn-modal-flex { display: flex; gap: 10px; margin-top: 15px; }
     </style>
 </head>
 <body>
@@ -67,8 +76,14 @@
             </div>
 
             <div id="view-list">
+                <div class="filter-tab">
+                    <div id="tab-all" class="tab-item active">Semua Laporan</div>
+                    <div id="tab-mine" class="tab-item">Laporan Saya</div>
+                    <div id="tab-bg" class="tab-bg"></div>
+                </div>
+
                 <button id="btn-buka-form" class="btn-main">+ Lapor Barang</button>
-                <div id="item-list"><p style="text-align: center; color: gray;">Memuat data...</p></div>
+                <div id="item-list"></div>
             </div>
 
             <div id="view-form" class="hidden">
@@ -82,6 +97,17 @@
             </div>
         </div>
     </div>
+
+    <div id="custom-alert" class="modal-overlay hidden">
+        <div class="modal-box">
+            <h3 id="modal-title">Penemu</h3>
+            <p id="modal-msg"></p>
+            <div id="modal-actions" class="btn-modal-flex">
+                <button id="btn-modal-ok" class="btn-main" style="margin:0;">OK</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="script.js"></script>
 </body>
 </html>
