--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
         .pass-container { position: relative; width: 100%; }
         .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 11px; color: #1877f2; font-weight: bold; }
-        .remember-box { display: flex; align-items: center; justify-content: center; gap: 8px; font-size: 14px; margin: 15px 0; color: #555; }
 
         /* CUSTOM MODAL */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); display: flex; justify-content: center; align-items: center; z-index: 9999; }
@@ -46,11 +45,7 @@
                 <input type="password" id="login-pass" placeholder="Password">
                 <span class="toggle-pass" id="toggle-l">LIHAT</span>
             </div>
-            <div class="remember-box">
-                <input type="checkbox" id="remember-me">
-                <label for="remember-me" style="cursor: pointer;">Selalu Ingat Saya!</label>
-            </div>
-            <button id="btn-login-action" class="btn-main">Login</button>
+            <button id="btn-login-action" class="btn-main" style="margin-top: 15px;">Login</button>
             <p class="link-auth" id="go-to-reg">Belum punya akun? Daftar sekarang!</p>
         </div>
 
