Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <div id="login-section">
-            <h2 style="text-align: center; color: #1877f2;">🔍 Penemu</h2>
+            <h2 style="text-align: center; color: #1877f2;">Masuk</h2>
             <input type="text" id="login-nick" placeholder="Nickname">
             <div class="pass-container">
                 <input type="password" id="login-pass" placeholder="Password">
@@ -106,3 +106,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
