--- a/index.html
+++ b/index.html
@@ -21,20 +21,14 @@
         button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; transition: 0.2s; }
         .btn-main { background: #1877f2; color: white; }
         .btn-save { background: #42b72a; color: white; }
-        .btn-cancel { background: #f02849; color: white; }
         .link-style { color: #1877f2; text-decoration: underline; cursor: pointer; font-size: 14px; text-align: center; display: block; margin-top: 15px; }
         .link-forgot { color: #888; font-size: 13px; text-align: center; display: block; margin-top: 5px; cursor: pointer; }
-        
-        /* Dashboard Styles */
         .search-container { position: relative; margin-bottom: 10px; }
-        #search-input { padding-left: 35px; border-radius: 20px; background: var(--search-bg); border: none; height: 45px; }
+        #search-input { padding-left: 35px; border-radius: 20px; background: var(--search-bg); border: none; height: 45px; width: 100%; }
         .filter-tab { display: flex; background: var(--tab-bg); border-radius: 10px; margin-bottom: 15px; padding: 5px; position: relative; }
         .tab-item { flex: 1; text-align: center; padding: 10px; font-size: 14px; font-weight: bold; cursor: pointer; z-index: 2; color: var(--text-sub); }
         .tab-item.active { color: #1877f2; }
         .tab-bg { position: absolute; width: 50%; height: calc(100% - 10px); background: var(--bg-container); border-radius: 8px; transition: 0.3s; z-index: 1; }
-        .slide-right { transform: translateX(100%); }
-        
-        /* Modal Overlay */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: flex; justify-content: center; align-items: center; z-index: 9999; }
         .modal-box { background: var(--bg-container); padding: 25px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
     </style>
@@ -56,7 +50,9 @@
                 <button id="btn-logout" style="width:auto; padding:5px 10px; background:#eee; color:#333;">Logout</button>
             </div>
             <div id="view-list">
-                <input type="text" id="search-input" placeholder="Cari nama barang...">
+                <div class="search-container">
+                    <input type="text" id="search-input" placeholder="Cari nama barang...">
+                </div>
                 <div class="filter-tab">
                     <div id="tab-all" class="tab-item active">Semua Laporan</div>
                     <div id="tab-mine" class="tab-item">Laporan Saya</div>
@@ -77,8 +73,8 @@
                 <button id="btn-send-otp" class="btn-main">Kirim Kode OTP</button>
             </div>
             <div id="step-otp" class="hidden">
-                <p style="font-size: 13px;">Masukkan OTP dan Password Baru.</p>
-                <input type="number" id="otp-input" placeholder="Kode OTP">
+                <p style="font-size: 13px;">Gunakan kode OTP dari email anda.</p>
+                <input type="number" id="otp-input" placeholder="6 Digit Kode">
                 <input type="password" id="new-pass-input" placeholder="Password Baru">
                 <button id="btn-verify-reset" class="btn-save">Update Password</button>
             </div>
