--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div id="register-section" class="hidden">
-            <h2 style="text-align: center; color: #42b72a;">📝 Buat Akun</h2>
+            <h2 style="text-align: center; color: #42b72a;">Buat Akun</h2>
             <input type="text" id="reg-nick" placeholder="Nickname">
             <input type="email" id="reg-email" placeholder="Alamat Gmail">
             <input type="number" id="reg-phone" placeholder="Nomor WhatsApp">
@@ -108,3 +108,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
